Bug 366483 - print-manager FTBFS against cups-2.2
Summary: print-manager FTBFS against cups-2.2
Status: RESOLVED FIXED
Alias: None
Product: print-manager
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Daniel Nicoletti
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-07 01:33 UTC by Rex Dieter
Modified: 2016-09-12 17:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.08.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rex Dieter 2016-08-07 01:33:38 UTC
Seems cups-2.2 changed api, and results in print-manager build failures.

/builddir/build/BUILD/print-manager-16.07.90/libkcups/KCupsRequest.cpp: In member function 'void KCupsRequest::getPrinterPPD(const QString&)':
/builddir/build/BUILD/print-manager-16.07.90/libkcups/KCupsRequest.cpp:284:75: error: 'cupsGetPPD2' was not declared in this scope
             filename = cupsGetPPD2(CUPS_HTTP_DEFAULT, printerName.toUtf8());
                                                                           ^
libkcups/CMakeFiles/kcupslib.dir/build.make:237: recipe for target 'libkcups/CMakeFiles/kcupslib.dir/KCupsRequest.cpp.o' failed

Reproducible: Always
Comment 1 Rex Dieter 2016-09-12 17:11:15 UTC
Git commit 971e75934bc64627226d61565f68aff3c9b0000b by Rex Dieter.
Committed on 12/09/2016 at 16:59.
Pushed by rdieter into branch 'master'.

fix FTBFS against cups-2.2

cupsGetPPD2 moved to cups/ppd.h
FIXED-IN: 16.08.2

M  +1    -0    libkcups/KCupsRequest.cpp

http://commits.kde.org/print-manager/971e75934bc64627226d61565f68aff3c9b0000b