fix FTBFS against cups-2.2

cupsGetPPD2 moved to cups/ppd.h

BUG: 366483
FIXED-IN: 16.08.2